--- a/admin.html
+++ b/admin.html
@@ -19,16 +19,16 @@
   <div class="card" role="main">
     <h2 style="margin:0 0 10px 0;">Registrar Compra — CAPI</h2>
 
-    <p class="hint">Ingresá la <strong>clave administrativa</strong> (Admin Token) — la guardás en Vercel como <code>ADMIN_TOKEN</code>.</p>
+    <p class="hint">Ingresá la <strong>clave administrativa</strong> </p>
 
     <label for="adminToken">Clave administrativa</label>
-    <input id="adminToken" type="password" autocomplete="off" placeholder="TOKEN ADMIN (no lo guardes aquí)" />
+    <input id="adminToken" type="password" autocomplete="off" placeholder="token" />
 
     <label for="nombre">Nombre</label>
-    <input id="nombre" type="text" placeholder="Nombre" />
+    <input id="nombre" type="text" placeholder="nombre" />
 
     <label for="apellido">Apellido</label>
-    <input id="apellido" type="text" placeholder="Apellido" />
+    <input id="apellido" type="text" placeholder="apellido" />
 
     <label for="phone">Teléfono (ej: +5491122334455)</label>
     <input id="phone" type="text" placeholder="+5491122334455" />
