--- a/index.html
+++ b/index.html
@@ -52,6 +52,15 @@
     </button>
   </div>
 
+  <div class="beneficios-card">
+    <h2 class="titulo-beneficios">¿QUÉ INCLUYE TU ACCESO?</h2>
+    <ul class="lista-beneficios">
+      <li><span class="emoji-check">✅</span> Soporte y atención 24/7</li>
+      <li><span class="emoji-check">✨</span> Eventos y premios semanales</li>
+      <li><span class="emoji-check">⚡</span> Acceso a todos los lanzamientos</li>
+      <li><span class="emoji-check">🔒</span> Comunidad privada y segura</li>
+    </ul>
+  </div>
     
     <div class="info-externa" style="background: rgba(0, 0, 0, 0.7); backdrop-filter: blur(10px); border: 1px solid rgba(255, 255, 255, 0.2);">
         <p id="minimoDeposito">NOVEDADES TODAS LAS SEMANAS</p>
@@ -79,7 +88,7 @@
 
   window.addEventListener("load", () => {
     const urlParams = new URLSearchParams(window.location.search);
-T    const fbc = urlParams.get("fbclid")
+    const fbc = urlParams.get("fbclid")
       ? `fb.1.${Date.now()}.${urlParams.get("fbclid")}`
       : "";
 
@@ -105,7 +114,7 @@ T    const fbc = urlParams.get("fbclid")
           // 2. Disparar el Píxel de Meta (SIN CAMBIOS)
           if (typeof fbq !== 'undefined') {
             fbq('track', 'Contact', {}, {eventID: eventID});
-          }
+s         }
           
           // 3. Rotador del lado del cliente (NUEVA LÓGICA SEGURA)
           // Define aquí tu lista de números
@@ -114,7 +123,7 @@ T    const fbc = urlParams.get("fbclid")
             // Puedes añadir más líneas aquí:
             // '5491122334455',
             // '5493511223344'
-          ];
+G         ];
           const lineaElegida = misLineas[Math.floor(Math.random() * misLineas.length)];
           
           // Mensaje "blanqueado" (sin "Circo Online")
@@ -125,8 +134,6 @@ T    const fbc = urlParams.get("fbclid")
           // 4. Redirigir al usuario
           window.location.href = urlFinal;
 
-          // La línea anterior (`window.location.href = /api/rotador...`) se ha eliminado.
-s
         });
       }
     });
