--- a/index.html
+++ b/index.html
@@ -1,142 +1,80 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>🎰 Circo Online</title>
+
+  <!-- META DE VERIFICACIÓN DE DOMINIO DE META -->
+  <meta name="facebook-domain-verification" content="o1hoq82czvz17489kpf7eb2sqc8ta1" />
+
+  <!--
+    OPTIMIZACIÓN DE FUENTES:
+    1. Pre-conectar al servidor de fuentes para ahorrar tiempo.
+    2. Cargar el CSS de las fuentes de forma "asíncrona" (no bloqueante)
+       usando 'rel="preload"' y 'onload'.
+  -->
+  <!-- OPTIMIZACIÓN DE FUENTES -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link rel="preload" href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Poppins:wght@400;600;700;900&family=Russo+One&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
+  <noscript><link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Poppins:wght@400;600;700;900&family=Russo+One&display=swap" rel="stylesheet"></noscript>
+
+  <!-- El CSS local se carga normalmente -->
+  <!-- CSS -->
+  <link rel="stylesheet" href="estilo.css">
   
-    <title>Acceso VIP</title>
+  <link rel="icon" type="image/png" href="img/favicon.png">
 
-  <meta name="facebook-domain-verification" content="o1hoq82czvz17489kpf7eb2sqc8ta1" />
-
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link rel="preload" href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Poppins:wght@400;600;700;900&family=Russo+One&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
-  <noscript><link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Poppins:wght@400;600;700;900&family=Russo+One&display=swap" rel="stylesheet"></noscript>
-
-  <link rel="stylesheet" href="estilo.css">
-  <link rel="icon" type="image/png" href="img/favicon.png">
-
-    <script>
-    !function(f,b,e,v,n,t,s)
-    {if(f.fbq)return;n=f.fbq=function(){n.callMethod?
-    n.callMethod.apply(n,arguments):n.queue.push(arguments)};
-    if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
-    n.queue=[];t=b.createElement(e);t.async=!0;
-    t.src=v;s=b.getElementsByTagName(e)[0];
-    s.parentNode.insertBefore(t,s)}(window, document,'script',
-    'https://connect.facebook.net/en_US/fbevents.js');
-    
-    fbq('init', '1946841772846486');
-    fbq('track', 'PageView');
-  </script>
-
-</head>
-<body style="background-image: url('img/fondotrebol.png'); background-size: cover; background-position: center; background-repeat: no-repeat; background-attachment: fixed;">
-  
-    <h1 class="logo-text" id="logoContainer" style="visibility: visible;">
-        <span class="logo-emoji">✨</span>
-        <span class="logo-text-fill" id="casinoName" style="color: #00ff88; text-shadow: 0 0 20px rgba(0, 255, 136, 0.5);">CLUB VIP</span>
-  </h1>
-
-  <div class="card" style="background: rgba(0, 0, 0, 0.7); backdrop-filter: blur(10px);">
-    <div class="main-text">
-            <p style="font-family: 'Russo One', sans-serif; font-size: 1.2rem; color: #00ff88; text-transform: uppercase; margin-bottom: 15px;"><span style="font-size: 1.3rem;">✨</span> DIVERTITE SIN LÍMITES <span style="font-size: 1.3rem;">✨</span></p>
-            <p style="font-family: 'Poppins', sans-serif; font-size: 1.6rem; color: #FFD700; font-weight: 700; text-transform: uppercase;">ACCESO 24/7</p>
-    </div>
-
-        <button class="popup-button" id="whatsappButton">
-      <span>QUIERO MI ACCESO</span>
-      <svg xmlns="http://www.w3.org/2000/svg" width="35" height="35" fill="white" viewBox="0 0 24 24">
-        <path d="M17.472 14.382c-.297-.149-1.758-.867-2.03-.967-.273-.099-.471-.149-.67.149-.197.297-.767.966-.94 1.164-.173.199-.347.223-.644.074-.297-.149-1.255-.462-2.39-1.475-.883-.788-1.48-1.761-1.653-2.059-.173-.297-.018-.458.13-.606.134-.133.297-.347.446-.521.151-.172.2-.296.3-.495.099-.198.05-.372-.025-.521-.075-.148-.669-1.611-.916-2.206-.242-.579-.487-.501-.669-.51l-.57-.01c-.198 0-.52.074-.792.372s-1.04 1.016-1.04 2.479 1.065 2.876 1.213 3.074c.149.198 2.095 3.2 5.076 4.487.709.306 1.263.489 1.694.626.712.226 1.36.194 1.872.118.571-.085 1.758-.719 2.006-1.413.248-.695.248-1.29.173-1.414-.074-.123-.272-.198-.57-.347m-5.421 7.403h-.004a9.87 9.87 0 01-5.031-1.378l-.361-.214-3.741.982.998-3.648-.235-.374a9.86 9.86 0 01-1.51-5.26c.001-5.45 4.436-9.884 9.888-9.884 2.64 0 5.122 1.03 6.988 2.898a9.825 9.825 0 012.893 6.994c-.003 5.45-4.437 9.884-9.885 9.884m8.413-18.297A11.815 11.815 0 0012.05 0C5.495 0 .16 5.335.157 11.892c0 2.096.547 4.142 1.588 5.945L.057 24l6.305-1.654a11.882 11.882 0 005.683 1.448h.005c6.554 0 11.89-5.335 11.893-11.893a11.821 11.821 0 00-3.48-8.413Z"/>
-      </svg>
-    </button>
-  </div>
-
-  <div class="beneficios-card">
-    <h2 class="titulo-beneficios">¿QUÉ INCLUYE TU ACCESO?</h2>
-    <ul class="lista-beneficios">
-      <li><span class="emoji-check">✅</span> Soporte y atención 24/7</li>
-      <li><span class="emoji-check">✨</span> Eventos y premios semanales</li>
-      <li><span class="emoji-check">⚡</span> Acceso a todos los lanzamientos</li>
-      <li><span class="emoji-check">🔒</span> Comunidad privada y segura</li>
-    </ul>
+  <!-- PIXEL DE META -->
+@@ -94,23 +88,50 @@
+    </div>
   </div>
-    
-    <div class="info-externa" style="background: rgba(0, 0, 0, 0.7); backdrop-filter: blur(10px); border: 1px solid rgba(255, 255, 255, 0.2);">
-        <p id="minimoDeposito">NOVEDADES TODAS LAS SEMANAS</p>
-        <p>COMUNIDAD ACTIVA 24/7</p>
-  </div>
 
-    <div class="metodos-pago" style="background: rgba(0, 0, 0, 0.7); backdrop-filter: blur(10px); border: 1px solid rgba(255, 255, 255, 0.2);">
-    <h2 class="titulo-pago">MÉTODOS DE PAGO</h2>
-    <div class="iconos-pago">
-      <img src="img/8043680.png" alt="Mastercard">
-      <img src="img/Mercado Pago.png" alt="MercadoPago">
-      <img src="img/logo-large.png" alt="Rapipago">
-      <img src="img/logo-cuenta-dni.png" alt="Pago Fácil">
-    </div>
-  </div>
+  <!-- SCRIPT PARA GUARDAR LEAD AUTOMÁTICAMENTE -->
+  <script>
+  async function saveLead(data) {
+    await fetch("https://script.google.com/macros/s/AKfycby_otbdnM6_QZuYKMX9fMx-46qXM80b4UpNe19W8NKcDzFpRre27AtGp3w1OerPGBLF/exec", {
+      method: "POST",
+      body: JSON.stringify(data),
+      headers: { "Content-Type": "application/json" },
+    });
+  }
 
-    <script>
-  async function saveLead(data) {
-    await fetch("https://script.google.com/macros/s/AKfycby_otbdnM6_QZuYKMX9fMx-46qXM80b4UpNe19W8NKcDzFpRre27AtGp3w1OerPGBLF/exec", {
-      method: "POST",
-      body: JSON.stringify(data),
-      headers: { "Content-Type": "application/json" },
-    });
-  }
+  window.addEventListener("load", () => {
+    const urlParams = new URLSearchParams(window.location.search);
+    const fbc = urlParams.get("fbclid")
+      ? `fb.1.${Date.now()}.${urlParams.get("fbclid")}`
+      : "";
 
-  window.addEventListener("load", () => {
-    const urlParams = new URLSearchParams(window.location.search);
-    const fbc = urlParams.get("fbclid")
-      ? `fb.1.${Date.now()}.${urlParams.get("fbclid")}`
-      : "";
+    const leadData = {
+      lead_id: `LEAD-${Math.floor(Math.random() * 1000000)}`,
+      token: Math.random().toString(36).substring(2, 6).toUpperCase(),
+      fbc: fbc,
+    };
 
-    const leadData = {
-      lead_id: `LEAD-${Math.floor(Math.random() * 1000000)}`,
-      token: Math.random().toString(36).substring(2, 6).toUpperCase(),
-      fbc: fbc,
-    };
+    saveLead(leadData);
+  });
+  </script>
 
-    saveLead(leadData);
-  });
-  </script>
+  <!-- BOTÓN WHATSAPP -->
+  <script>
+    document.addEventListener('DOMContentLoaded', () => {
+      const whatsappButton = document.getElementById('whatsappButton');
+      if (whatsappButton) {
+        whatsappButton.addEventListener('click', () => {
+          const waNumber = '5492236735372';
+          const waMessage = encodeURIComponent('Hola, quiero más información');
+          const whatsappUrl = `https://wa.me/${waNumber}?text=${waMessage}`;
 
-    <script>
-    document.addEventListener('DOMContentLoaded', () => {
-      const whatsappButton = document.getElementById('whatsappButton');
-      if (whatsappButton) {
-        whatsappButton.addEventListener('click', () => {
-          
-          // 1. Generar un event_id único (SIN CAMBIOS)
-          const eventID = 'contact_' + Date.now() + '_' + Math.floor(Math.random() * 10000);
+          if (typeof fbq !== 'undefined') {
+            fbq('track', 'Contact');
+          }
 
-          // 2. Disparar el Píxel de Meta (SIN CAMBIOS)
-          if (typeof fbq !== 'undefined') {
-            fbq('track', 'Contact', {}, {eventID: eventID});
-s         }
-          
-          // 3. Rotador del lado del cliente (NUEVA LÓGICA SEGURA)
-          // Define aquí tu lista de números
-          const misLineas = [
-            '5492236735372'
-            // Puedes añadir más líneas aquí:
-            // '5491122334455',
-            // '5493511223344'
-G         ];
-          const lineaElegida = misLineas[Math.floor(Math.random() * misLineas.length)];
-          
-          // Mensaje "blanqueado" (sin "Circo Online")
-          const mensaje = encodeURIComponent('Hola, quiero crear mi usuario');
-          
-          const urlFinal = `https://wa.me/${lineaElegida}?text=${mensaje}`;
-
-          // 4. Redirigir al usuario
-          window.location.href = urlFinal;
-
-        });
-      }
-    });
-  </script>
+          window.open(whatsappUrl, '_blank');
+        });
+      }
+    });
+  </script>
 </body>
 </html>
