--- a/index.html
+++ b/index.html
@@ -1,80 +1,137 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>🎰 Circo Online</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>🎰 Circo Online</title>
 
-  <!-- META DE VERIFICACIÓN DE DOMINIO DE META -->
-  <meta name="facebook-domain-verification" content="o1hoq82czvz17489kpf7eb2sqc8ta1" />
+  <!-- META DE VERIFICACIÓN DE DOMINIO DE META -->
+  <meta name="facebook-domain-verification" content="o1hoq82czvz17489kpf7eb2sqc8ta1" />
 
-  <!--
-    OPTIMIZACIÓN DE FUENTES:
-    1. Pre-conectar al servidor de fuentes para ahorrar tiempo.
-    2. Cargar el CSS de las fuentes de forma "asíncrona" (no bloqueante)
-       usando 'rel="preload"' y 'onload'.
-  -->
-  <!-- OPTIMIZACIÓN DE FUENTES -->
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link rel="preload" href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Poppins:wght@400;600;700;900&family=Russo+One&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
-  <noscript><link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Poppins:wght@400;600;700;900&family=Russo+One&display=swap" rel="stylesheet"></noscript>
+  <!-- OPTIMIZACIÓN DE FUENTES -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link rel="preload" href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Poppins:wght@400;600;700;900&family=Russo+One&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
+  <noscript><link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Poppins:wght@400;600;700;900&family=Russo+One&display=swap" rel="stylesheet"></noscript>
 
-  <!-- El CSS local se carga normalmente -->
-  <!-- CSS -->
-  <link rel="stylesheet" href="estilo.css">
-  
-  <link rel="icon" type="image/png" href="img/favicon.png">
+  <!-- CSS -->
+  <link rel="stylesheet" href="estilo.css">
+  <link rel="icon" type="image/png" href="img/favicon.png">
 
-  <!-- PIXEL DE META -->
-@@ -94,23 +88,50 @@
-    </div>
-  </div>
+  <!-- PIXEL DE META -->
+  <script>
+    !function(f,b,e,v,n,t,s)
+    {if(f.fbq)return;n=f.fbq=function(){n.callMethod?
+    n.callMethod.apply(n,arguments):n.queue.push(arguments)};
+    if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
+    n.queue=[];t=b.createElement(e);t.async=!0;
+    t.src=v;s=b.getElementsByTagName(e)[0];
+    s.parentNode.insertBefore(t,s)}(window, document,'script',
+    'https://connect.facebook.net/en_US/fbevents.js');
+    
+    fbq('init', '1946841772846486');
+    fbq('track', 'PageView');
+  </script>
 
-  <!-- SCRIPT PARA GUARDAR LEAD AUTOMÁTICAMENTE -->
-  <script>
-  async function saveLead(data) {
-    await fetch("https://script.google.com/macros/s/AKfycby_otbdnM6_QZuYKMX9fMx-46qXM80b4UpNe19W8NKcDzFpRre27AtGp3w1OerPGBLF/exec", {
-      method: "POST",
-      body: JSON.stringify(data),
-      headers: { "Content-Type": "application/json" },
-    });
-  }
+</head>
+<body style="background-image: url('img/fondotrebol.png'); background-size: cover; background-position: center; background-repeat: no-repeat; background-attachment: fixed;">
+  
+  <h1 class="logo-text" id="logoContainer" style="visibility: visible;">
+    <span class="logo-emoji">🎰</span>
+    <span class="logo-text-fill" id="casinoName" style="color: #00ff88; text-shadow: 0 0 20px rgba(0, 255, 136, 0.5);">CIRCO ONLINE</span>
+  </h1>
 
-  window.addEventListener("load", () => {
-    const urlParams = new URLSearchParams(window.location.search);
-    const fbc = urlParams.get("fbclid")
-      ? `fb.1.${Date.now()}.${urlParams.get("fbclid")}`
-      : "";
+  <div class="card" style="background: rgba(0, 0, 0, 0.7); backdrop-filter: blur(10px);">
+    <div class="main-text">
+      <p style="font-family: 'Russo One', sans-serif; font-size: 1.2rem; color: #00ff88; text-transform: uppercase; margin-bottom: 15px;"><span style="font-size: 1.3rem;">🔥</span> JUGÁ Y GANÁ EN GRANDE <span style="font-size: 1.3rem;">🔥</span></p>
+      <p style="font-family: 'Poppins', sans-serif; font-size: 1.6rem; color: #FFD700; font-weight: 700; text-transform: uppercase;">RETIROS ILIMITADOS</p>
+    </div>
 
-    const leadData = {
-      lead_id: `LEAD-${Math.floor(Math.random() * 1000000)}`,
-      token: Math.random().toString(36).substring(2, 6).toUpperCase(),
-      fbc: fbc,
-    };
+    <button class="popup-button" id="whatsappButton">
+      <span>CREÁ TU USUARIO</span>
+      <svg xmlns="http://www.w3.org/2000/svg" width="35" height="35" fill="white" viewBox="0 0 24 24">
+        <path d="M17.472 14.382c-.297-.149-1.758-.867-2.03-.967-.273-.099-.471-.149-.67.149-.197.297-.767.966-.94 1.164-.173.199-.347.223-.644.074-.297-.149-1.255-.462-2.39-1.475-.883-.788-1.48-1.761-1.653-2.059-.173-.297-.018-.458.13-.606.134-.133.297-.347.446-.521.151-.172.2-.296.3-.495.099-.198.05-.372-.025-.521-.075-.148-.669-1.611-.916-2.206-.242-.579-.487-.501-.669-.51l-.57-.01c-.198 0-.52.074-.792.372s-1.04 1.016-1.04 2.479 1.065 2.876 1.213 3.074c.149.198 2.095 3.2 5.076 4.487.709.306 1.263.489 1.694.626.712.226 1.36.194 1.872.118.571-.085 1.758-.719 2.006-1.413.248-.695.248-1.29.173-1.414-.074-.123-.272-.198-.57-.347m-5.421 7.403h-.004a9.87 9.87 0 01-5.031-1.378l-.361-.214-3.741.982.998-3.648-.235-.374a9.86 9.86 0 01-1.51-5.26c.001-5.45 4.436-9.884 9.888-9.884 2.64 0 5.122 1.03 6.988 2.898a9.825 9.825 0 012.893 6.994c-.003 5.45-4.437 9.884-9.885 9.884m8.413-18.297A11.815 11.815 0 0012.05 0C5.495 0 .16 5.335.157 11.892c0 2.096.547 4.142 1.588 5.945L.057 24l6.305-1.654a11.882 11.882 0 005.683 1.448h.005c6.554 0 11.89-5.335 11.893-11.893a11.821 11.821 0 00-3.48-8.413Z"/>
+      </svg>
+    </button>
+  </div>
 
-    saveLead(leadData);
-  });
-  </script>
+  <div class="barra-juegos-slider" style="background: rgba(0, 0, 0, 0.7); backdrop-filter: blur(10px);">
+    <div class="scroll-content">
+      <img src="img/game.pragmaticPlayGatesOfOlympus.thumbnail.512x512_v4.png" alt="Slots">
+      <img src="img/game.pragmaticPlayGoldParty.thumbnail.512x512_v3.png" alt="Ruleta">
+      <img src="img/game.pragmaticPlayJokersJewels.thumbnail.512x512_v3.png" alt="Cartas">
+      <img src="img/game.pragmaticPlaySweetBonanza.thumbnail.512x512_v4.png" alt="Deportes">
+      <img src="img/game.pragmaticPlayCongoCash.thumbnail.512x512_v3.png" alt="Jackpot">
+      <img src="img/game.mg9MasksOfFire.thumbnail.512x512_v3.png" alt="Bonus">
+      <!-- segundo set -->
+      <img src="img/game.pragmaticPlayGatesOfOlympus.thumbnail.512x512_v4.png" alt="Slots">
+      <img src="img/game.pragmaticPlayGoldParty.thumbnail.512x512_v3.png" alt="Ruleta">
+      <img src="img/game.pragmaticPlayJokersJewels.thumbnail.512x512_v3.png" alt="Cartas">
+      <img src="img/game.pragmaticPlaySweetBonanza.thumbnail.512x512_v4.png" alt="Deportes">
+      <img src="img/game.pragmaticPlayCongoCash.thumbnail.512x512_v3.png" alt="Jackpot">
+static     <img src="img/game.mg9MasksOfFire.thumbnail.512x512_v3.png" alt="Bonus">
+    </div>
+  </div>
+  
+  <div class="info-externa" style="background: rgba(0, 0, 0, 0.7); backdrop-filter: blur(10px); border: 1px solid rgba(255, 255, 255, 0.2);">
+    <p id="minimoDeposito">Mínimo de carga: $1000</p>
+    <p>CIRCO EN VIVO - SLOTS - DEPORTIVAS</p>
+  </div>
 
-  <!-- BOTÓN WHATSAPP -->
-  <script>
-    document.addEventListener('DOMContentLoaded', () => {
-      const whatsappButton = document.getElementById('whatsappButton');
-      if (whatsappButton) {
-        whatsappButton.addEventListener('click', () => {
-          const waNumber = '5492236735372';
-          const waMessage = encodeURIComponent('Hola, quiero más información');
-          const whatsappUrl = `https://wa.me/${waNumber}?text=${waMessage}`;
+  <div class="metodos-pago" style="background: rgba(0, 0, 0, 0.7); backdrop-filter: blur(10px); border: 1px solid rgba(255, 255, 255, 0.2);">
+    <h2 class="titulo-pago">MÉTODOS DE PAGO</h2>
+    <div class="iconos-pago">
+      <img src="img/8043680.png" alt="Mastercard">
+      <img src="img/Mercado Pago.png" alt="MercadoPago">
+  	  <img src="img/logo-large.png" alt="Rapipago">
+      <img src="img/logo-cuenta-dni.png" alt="Pago Fácil">
+    </div>
+  </div>
 
-          if (typeof fbq !== 'undefined') {
-            fbq('track', 'Contact');
-          }
+  <!-- SCRIPT PARA GUARDAR LEAD AUTOMÁTICAMENTE -->
+  <script>
+  async function saveLead(data) {
+    await fetch("https://script.google.com/macros/s/AKfycby_otbdnM6_QZuYKMX9fMx-46qXM80b4UpNe19W8NKcDzFpRre27AtGp3w1OerPGBLF/exec", {
+      method: "POST",
+      body: JSON.stringify(data),
+      headers: { "Content-Type": "application/json" },
+    });
+  }
 
-          window.open(whatsappUrl, '_blank');
-        });
-      }
-    });
-  </script>
+  window.addEventListener("load", () => {
+    const urlParams = new URLSearchParams(window.location.search);
+    const fbc = urlParams.get("fbclid")
+      ? `fb.1.${Date.now()}.${urlParams.get("fbclid")}`
+      : "";
+
+    const leadData = {
+      lead_id: `LEAD-${Math.floor(Math.random() * 1000000)}`,
+      token: Math.random().toString(36).substring(2, 6).toUpperCase(),
+      fbc: fbc,
+    };
+
+    saveLead(leadData);
+  });
+  </script>
+
+  <!-- BOTÓN WHATSAPP (ACTUALIZADO) -->
+  <script>
+    document.addEventListener('DOMContentLoaded', () => {
+      const whatsappButton = document.getElementById('whatsappButton');
+á     if (whatsappButton) {
+        whatsappButton.addEventListener('click', () => {
+          
+          // 1. Disparar el Píxel de Meta
+          if (typeof fbq !== 'undefined') {
+            fbq('track', 'Contact');
+          }
+          
+          // 2. Redirigir al rotador (nuevo .js)
+          // Se usa Date.now() para evitar el caché del navegador
+          window.location.href = `/api/rotador?t=${Date.now()}`;
+        });
+      }
+    });
+  </script>
 </body>
 </html>
